// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel component should render with default props 1`] = `
<div>
  <div
    class="govuk-panel govuk-panel--confirmation"
  >
    <div
      class="govuk-panel__body"
    >
      Case : 
    </div>
  </div>
  <h2
    class="govuk-heading-m"
  >
    Case   
  </h2>
</div>
`;

exports[`Panel component should render with title and team name when passed 1`] = `
<div>
  <div
    class="govuk-panel govuk-panel--confirmation"
  >
    <div
      class="govuk-panel__body"
    >
      Case completed: FOI BICSPI Acceptance Team
    </div>
  </div>
  <h2
    class="govuk-heading-m"
  >
    Case test-case-ref completed FOI BICSPI Acceptance Team
  </h2>
</div>
`;
